fix nav-menu z-index on heroku

--- a/app/assets/stylesheets/duys-trendy-project.webflow.scss
+++ b/app/assets/stylesheets/duys-trendy-project.webflow.scss
@@ -344,6 +344,7 @@ blockquote {
 
 .nav-menu {
   float: right;
+  z-index: 1000;
 }
 
 .nav-menu.left {
